Se corrige configuracion de CORS y jwt para rutas publicas.